bk_ida/gobmkida/c2/store_persistent_owl_cache
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/store_persistent_owl_cache/src/engine/persistent.c:1290:6: error: use of undeclared identifier 'byte_9B389F'
if ( byte_9B389F[i] != 3 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/store_persistent_owl_cache/src/engine/persistent.c:1305:25: error: use of undeclared identifier 'byte_9B388C'
v23 = ( unsigned __int8)byte_9B388C[k]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/store_persistent_owl_cache/src/engine/persistent.c:1312:4: error: use of undeclared identifier 'byte_9B388D'
|| byte_9B388D[k] != 3 && j == *( ( char *)&v86 + k + 5)) ) 
   ^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/store_persistent_owl_cache/src/obj/1/persistent.o] Error 1
